# prompting-with-purpose

./: .GenAI - AI Prompting Crash Course - Using AI as a Copilot.md  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  gemini.md  index.html  mkdocs.yml  pyproject.toml
a_writing_prompts/: index.html
activities/: index.html
appendix/: index.html
b_learning_prompts/: index.html
c_problem_solving_prompts/: index.html
chain_of_thought_prompting/: index.html
conclusion/: index.html
d_business_prompts/: index.html
docs/: .course_improvements.md  00_introduction.md  01_understanding_ai_basics.md  02_first_principles_thinking.md  03_chain_of_thought_prompting.md  04_meta_prompting.md  05_results_verification.md  06_practical_applications_and_tool_tips.md  07_activities.md  08_conclusion.md  09_references.md  10_appendix.md  11_prompt_library.md  11a_writing_prompts.md  11b_learning_prompts.md  11c_problem_solving_prompts.md  11d_business_prompts.md  a_writing_prompts.md  activities.md  appendix.md  b_learning_prompts.md  c_problem_solving_prompts.md  chain_of_thought_prompting.md  conclusion.md  d_business_prompts.md  ethical_use_of_ai.md  first_principles_thinking.md  index.md  introduction.md  meta_prompting.md  practical_applications_and_tool_tips.md  prompt_library.md  references.md  results_verification.md  understanding_ai_basics.md
ethical_use_of_ai/: index.html
first_principles_thinking/: index.html
introduction/: index.html
meta_prompting/: index.html
practical_applications_and_tool_tips/: index.html
(+6 files in other folders)
